syntax = "proto3";
package auction;

option go_package = "github.com/sofiadesimon15/auction-system/proto";

// TokenRing service for token passing between nodes
service TokenRing {
  rpc RequestToken(Request) returns (Response) {}
  rpc PassToken(TokenMessage) returns (Response) {}
}

// Auction service for handling bids and querying results
service AuctionService {
  rpc Bid(BidRequest) returns (BidResponse) {}
  rpc Result(ResultRequest) returns (ResultResponse) {}
}

// Messages for TokenRing
message Request {
  int32 node_id = 1;
}

message TokenMessage {
  int32 token_holder_id = 1;
}

message Response {
  string message = 1;
}

// Auction messages
message BidRequest {
  string bidder_id = 1;
  int32 amount = 2;
}

message BidResponse {
  string outcome = 1; // "fail", "success", or "exception"
}

message ResultRequest {}

message ResultResponse {
  string outcome = 1; // "Current Highest Bid: X by Y" or "Winner: Y with bid X"
}